[tool.poetry]
name = "rpy2-bug-3-6-0"
version = "0.1.0"
description = ""
authors = ["kss2k <slupphaugkjell@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
rpy2= "3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
